# affine-correspondences-for-camera-geometry

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py
examples/: cpp_example.cpp  example_essential_matrix.ipynb  example_fundamental_matrix.ipynb  example_homography.ipynb
include/: affine_estimators.h  feature_utils.h
lib/: CMakeLists.txt
lib/VLFeat/: CMakeLists.txt
lib/VLFeatExtraction/: Descriptors.cpp  Descriptors.hpp  Extraction.cpp  Extraction.hpp  Features.cpp  Features.hpp  Matching.cpp  Matching.hpp  Options.hpp
src/: main.cpp
src/pyrobustac/: __init__.py
src/pyrobustac/include/: affine_estimators.h  feature_utils.h  preemption_combined.h  preemption_uncertainty_based.h  robustac_python.h  solver_essential_matrix_two_affine.h  solver_homography_two_affinities.h
src/pyrobustac/src/: bindings.cpp  robustac_python.cpp
